# chat-wrenai

./: .env-semple  .gitignore  ARCHITECTURE.md  README.md  compose.yml  main.py  makefile  pyproject.toml
app/: main.py
app/controllers/: __init__.py  chat_controller.py  knowledge_controller.py  wrenai_controller.py
app/routers/: __init__.py  chat_router.py  knowledge_router.py  wrenai_router.py
app/schamas/: bi_schemas.py
controllers/: __init__.py  chat_controller.py  knowledge_controller.py
docs/: RAG_AGENT_METHOD.md
etc/: config.properties
etc/mdl/: wrenmdl.json
routers/: chat_router.py  knowledge_router.py
schamas/: chat_schemas.py  document_schemas.py
scripts/: dbsample.py
tools/: WrenAi_tools.py
utils/: knowledge.py  llm.py  settings.py  vector_db.py
