[project]
name = "test-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.2.6",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "fastembed>=0.7.3",
    "groq>=0.33.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "uvicorn[standard]>=0.38.0",
]
